Added some pics. Tweaking to theme.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: framework
 heading: 'Darren J. Scott'
 subheading: 'Physicist (particle theory)'
-banner: 'default'
+banner: "/assets/images/banners/bayern2.jpg"
 ---
 
 {{ content }}
